--- a/css/responsive.css
+++ b/css/responsive.css
@@ -48,17 +48,45 @@
 
 @media (max-width: 991px) {
 
-	.time-logo-section, .time-logo-section a img {
+	.jomo-logo {
+		width: 40%;
 		text-align: center;
 	}
 
 	.time-logo-section {
+		margin-top: -4rem !important;
 		padding-left: 0rem !important;
 		padding-right: 0rem !important;
 	}
 
-	.camlogo {
-		padding-top: 15px;
+	.time-logo-section, .time-logo-section a img {
+		text-align: center;
+	}
+
+	.googleplay, .apple {
+		padding-right: 0px !important;
+	}
+
+	.apple {
+		margin-right: 10px;
+	}
+
+	.camlogo img {
+		width: 200px !important;
+	}
+
+	.donating {
+		margin-top: 0 !important;
+		margin-bottom: 3% !important;
+		margin-right: 0rem !important;
+		margin-left: 0px !important;
+		padding-left: 10%;
+		padding-right: 10%;
+	}
+
+	.donating h1 {
+		text-align: center;
+		font-size: 24pt;
 	}
 
 	.phonemap {
@@ -77,42 +105,6 @@
 
 }
 
-@media (max-width: 990px) {
-
-	.jomo-logo {
-		width: 40%;
-		text-align: center;
-	}
-
-	.time-logo-section {
-		margin-top: -4rem !important;
-	}
-
-	.time-logo-section  a {
-		text-align: center;
-	}
-
-	.phone-img img {
-		text-align: center;
-		margin-right: 0px;
-		width: 10%;
-	}
-
-	.donating {
-		margin-right: 0rem !important;
-		margin-bottom: 5rem !important;
-		margin-left: 0px !important;
-		padding-left: 10%;
-		padding-right: 10%;
-	}
-
-	.donating h1 {
-		text-align: center;
-		font-size: 24pt;
-	}
-
-}
-
 @media (max-width: 823px) {
 
 	.time-logo-section h3, #phone, #phone input {
@@ -124,7 +116,7 @@
 @media (max-width: 767px) {
 
 	.jomo-logo {
-		width: 60%;
+		width: 50%;
 	}
 
 	.time-logo-section h3 {
@@ -191,6 +183,7 @@
 	.vertical-margin p {
 		font-size: 14pt !important;
 	}
+
 }
 
 @media (max-width: 543px) {
@@ -223,6 +216,15 @@
 	.vertical-margin p {
 		font-size: 12pt !important;
 	}
+
+}
+
+@media (max-width: 413px) {
+
+	.apple {
+		margin-right: 0px !important;
+	}
+
 }
 
 @media (max-width: 367px) {
@@ -231,6 +233,7 @@
 		padding-right: 1rem !important;
 		padding-left: 1rem !important;
 	}
+
 }
 
 @media (max-width: 340px) {
@@ -238,4 +241,5 @@
 	.donating h1 {
 		font-size: 18pt;
 	}
+
 }
